@@ -6,7 +6,7 @@
 
     <groupId>org.javalaboratories</groupId>
     <artifactId>java-extensions</artifactId>
-    <version>1.1.10.1-RELEASE</version>
+    <version>2.0.0.0-RELEASE</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>This is a library of utilities to encourage functional
@@ -46,11 +46,15 @@
     </scm>
 
     <properties>
-        <lombok-version>1.18.16</lombok-version>
-        <logback-version>1.4.1</logback-version>
+        <awaitility-version>4.2.0</awaitility-version>
+        <lombok-version>1.18.30</lombok-version>
+        <logback-version>1.4.12</logback-version>
         <logcaptor-version>2.2.0</logcaptor-version>
-        <junit-version>5.5.2</junit-version>
+        <junit-version>5.10.2</junit-version>
+        <mockito-version>5.11.0</mockito-version>
         <apache-commons-codec-version>1.15</apache-commons-codec-version>
+        <gson-version>2.10.1</gson-version>
+        <commons-lang3-version>3.12.0</commons-lang3-version>
         <sun-xml-sercurity-version>1.0</sun-xml-sercurity-version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -81,7 +85,18 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>${commons-lang3-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility-version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
@@ -101,6 +116,12 @@
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -118,10 +139,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.12.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
                             <groupId>org.projectlombok</groupId>
@@ -133,7 +155,11 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
@@ -165,6 +191,8 @@
                 <version>3.3.2</version>
                 <configuration>
                     <doclint>all,-missing</doclint>
+                    <release>21</release>
+                    <additionalOptions>--enable-preview</additionalOptions>
                 </configuration>
                 <executions>
                     <execution>
@@ -191,17 +219,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
             </plugin>
         </plugins>
     </build>
